# xgoal_tutor

./: .gitignore  01_baseline_lr_xg_model.ipynb  README.md  ingest_statsbomb.py  prompt.txt  pyproject.toml  streamlit_app.py  train_logreg.py
docs/: swagger.yaml  xgoal_postman_collection.json
notebooks/: 01_baseline_lr_xg_model.ipynb  eda.ipynb  eda_codex.ipynb
results/: logreg_coefficients.json
scripts/: build_features.py  create-shots-wide.sql  data_checks.py  ingest_statsbomb.py  train_lightgbm.py  train_logreg.py
src/scripts/: download_helper.py  ingest_statsbomb.py  run_llm_explanations.py  train_logreg.py
src/xgoal_tutor/: etl.py
src/xgoal_tutor/api/: __init__.py  _database.py  _jobs.py  _lineups.py  _matches.py  _queries.py  _row_utils.py  _shots.py  app.py  celery_app.py  database.py  default_model.py  interfaces.py  main.py  models.py  schemas.py  service.py  services.py  tasks.py
src/xgoal_tutor/etl/: __init__.py  __main__.py  download_helper.py  http_helper.py  schema.py  statsbomb.py
src/xgoal_tutor/ingest/: __init__.py  loader.py  reader.py  rows.py  schema.py  value_extractors.py  writer.py
src/xgoal_tutor/llm/: __init__.py  client.py  models.py  move_simulation.py  pipeline.py  prompts.py  utils.py  xgoal_prompt_builder.py
src/xgoal_tutor/model/: __init__.py  logistic.py
src/xgoal_tutor/modeling/: __init__.py  constants.py  data.py  evaluation.py  feature_engineering.py  preprocessing.py  splitting.py
src/xgoal_tutor/ui/: __init__.py  (+5 more)
tests/: conftest.py  test_api_app.py  test_api_integration.py  test_api_services.py  test_etl.py  test_feature_engineering.py  test_geometry.py  test_ingest_integration.py  test_llm_pipeline.py  test_logistic_training.py  test_modeling_lr.py  test_move_simulation.py  test_prompt_builder.py  test_prompt_definitions.py  test_xgoal_prompt_builder.py
ui/: __init__.py  api.py  config.py  formatting.py  models.py  pitch.py
(+9 files in other folders)
