[tool.poetry]
name = "xgoal-tutor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "xgoal_tutor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.1"
lightgbm = "^4.3.0"
shap = "^0.46.0"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[tool.pytest.ini_options]
pythonpath = ["src"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
